code-generation/y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : IF '(' exp $$7 ')' cmd restoIf

  25  $$8 :

  26  restoIf : ELSE $$8 cmd
  27          |

  28  exp : NUM
  29      | TRUE
  30      | FALSE
  31      | ID
  32      | ID '=' exp
  33      | ID ASAD exp
  34      | ID INCR
  35      | INCR ID
  36      | '(' exp ')'
  37      | '!' exp
  38      | exp '+' exp
  39      | exp '-' exp
  40      | exp '*' exp
  41      | exp '/' exp
  42      | exp '%' exp
  43      | exp '>' exp
  44      | exp '<' exp
  45      | exp EQ exp
  46      | exp LEQ exp
  47      | exp GEQ exp
  48      | exp NEQ exp
  49      | exp OR exp
  50      | exp AND exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	'{'  shift 31
	'}'  reduce 4

	$$3  goto 32
	cmd  goto 33
	exp  goto 34


state 20
	exp : ID .  (31)
	exp : ID . '=' exp  (32)
	exp : ID . ASAD exp  (33)
	exp : ID . INCR  (34)

	ASAD  shift 35
	INCR  shift 36
	'='  shift 37
	EQ  reduce 31
	LEQ  reduce 31
	GEQ  reduce 31
	NEQ  reduce 31
	AND  reduce 31
	OR  reduce 31
	'>'  reduce 31
	'<'  reduce 31
	'+'  reduce 31
	'-'  reduce 31
	'*'  reduce 31
	'/'  reduce 31
	'%'  reduce 31
	')'  reduce 31
	';'  reduce 31


state 21
	exp : NUM .  (28)

	.  reduce 28


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 38
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 39
	.  error


state 24
	cmd : IF . '(' exp $$7 ')' cmd restoIf  (24)

	'('  shift 40
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 41


state 26
	exp : TRUE .  (29)

	.  reduce 29


state 27
	exp : FALSE .  (30)

	.  reduce 30


state 28
	exp : INCR . ID  (35)

	ID  shift 42
	.  error


state 29
	exp : '!' . exp  (37)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 43


state 30
	exp : '(' . exp ')'  (36)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 44


state 31
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 45


state 32
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 46
	.  error


state 33
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 34
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	EQ  shift 47
	LEQ  shift 48
	GEQ  shift 49
	NEQ  shift 50
	AND  shift 51
	OR  shift 52
	'>'  shift 53
	'<'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	';'  shift 60
	.  error


state 35
	exp : ID ASAD . exp  (33)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 61


state 36
	exp : ID INCR .  (34)

	.  reduce 34


state 37
	exp : ID '=' . exp  (32)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 62


state 38
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 63
	.  error


state 39
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 64
	.  error


state 40
	cmd : IF '(' . exp $$7 ')' cmd restoIf  (24)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 65


state 41
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 66
	.  error


state 42
	exp : INCR ID .  (35)

	.  reduce 35


state 43
	exp : '!' exp .  (37)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	.  reduce 37


state 44
	exp : '(' exp . ')'  (36)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	EQ  shift 47
	LEQ  shift 48
	GEQ  shift 49
	NEQ  shift 50
	AND  shift 51
	OR  shift 52
	'>'  shift 53
	'<'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	')'  shift 67
	.  error


state 45
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	'{'  shift 31
	'}'  shift 68
	.  error

	cmd  goto 33
	exp  goto 34


state 46
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 47
	exp : exp EQ . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 69


state 48
	exp : exp LEQ . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 70


state 49
	exp : exp GEQ . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 71


state 50
	exp : exp NEQ . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 72


state 51
	exp : exp AND . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 73


state 52
	exp : exp OR . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 74


state 53
	exp : exp '>' . exp  (43)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 75


state 54
	exp : exp '<' . exp  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 76


state 55
	exp : exp '+' . exp  (38)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 77


state 56
	exp : exp '-' . exp  (39)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 78


state 57
	exp : exp '*' . exp  (40)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 79


state 58
	exp : exp '/' . exp  (41)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 80


state 59
	exp : exp '%' . exp  (42)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 81


state 60
	cmd : exp ';' .  (14)

	.  reduce 14


state 61
	exp : ID ASAD exp .  (33)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	EQ  shift 47
	LEQ  shift 48
	GEQ  shift 49
	NEQ  shift 50
	AND  shift 51
	OR  shift 52
	'>'  shift 53
	'<'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	')'  reduce 33
	';'  reduce 33


state 62
	exp : ID '=' exp .  (32)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	EQ  shift 47
	LEQ  shift 48
	GEQ  shift 49
	NEQ  shift 50
	AND  shift 51
	OR  shift 52
	'>'  shift 53
	'<'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	')'  reduce 32
	';'  reduce 32


state 63
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 82
	.  error


state 64
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 83
	','  reduce 17

	$$4  goto 84


state 65
	cmd : IF '(' exp . $$7 ')' cmd restoIf  (24)
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)
	$$7 : .  (23)

	EQ  shift 47
	LEQ  shift 48
	GEQ  shift 49
	NEQ  shift 50
	AND  shift 51
	OR  shift 52
	'>'  shift 53
	'<'  shift 54
	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	')'  reduce 23

	$$7  goto 85


state 66
	cmd : WHILE $$5 '(' . exp ')' $$6 cmd  (22)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INCR  shift 28
	'!'  shift 29
	'('  shift 30
	.  error

	exp  goto 86


state 67
	exp : '(' exp ')' .  (36)

	.  reduce 36


state 68
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


state 69
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp EQ exp .  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	EQ  reduce 45
	LEQ  reduce 45
	GEQ  reduce 45
	NEQ  reduce 45
	AND  reduce 45
	OR  reduce 45
	'>'  reduce 45
	'<'  reduce 45
	')'  reduce 45
	';'  reduce 45


state 70
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp LEQ exp .  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	EQ  reduce 46
	LEQ  reduce 46
	GEQ  reduce 46
	NEQ  reduce 46
	AND  reduce 46
	OR  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	')'  reduce 46
	';'  reduce 46


state 71
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp GEQ exp .  (47)
	exp : exp . NEQ exp  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)

	'+'  shift 55
	'-'  shift 56
	'*'  shift 57
	'/'  shift 58
	'%'  shift 59
	EQ  reduce 47
	LEQ  reduce 47
	GEQ  reduce 47
	NEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	')'  reduce 47
	';'  reduce 47


state 72
	exp : exp . '+' exp  (38)
	exp : exp . '-' exp  (39)
	exp : exp . '*' exp  (40)
	exp : exp . '/' exp  (41)
	exp : exp . '%' exp  (42)
	exp : exp . '>' exp  (43)
	exp : exp . '<' exp  (44)
	exp : exp . EQ exp  (45)
	exp : exp . LEQ exp  (46)
	exp : exp . GEQ exp  (47)
	exp : exp . NEQ exp  (48)
	exp : exp NEQ exp .  (48)
	exp : exp . OR exp  (49)
	exp : exp . AND exp  (50)
